--- a/notritionVendorsAPP/View/Base.lproj/Main.storyboard
+++ b/notritionVendorsAPP/View/Base.lproj/Main.storyboard
@@ -135,11 +135,20 @@
                         <outlet property="tableView" destination="bi8-3g-dWM" id="Eut-Gh-79b"/>
                         <segue destination="O60-7L-RIi" kind="show" identifier="ShopSeachVC" id="9zj-Eq-LIz"/>
                         <segue destination="8fN-v2-VYx" kind="show" identifier="ShopToGoogleMap" id="QdL-Uh-9tM"/>
+                        <segue destination="fsY-sK-E4e" kind="show" identifier="ShopToItemInShop" id="eEY-o3-cYD"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aMM-gi-Zev" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-460.86956521739131" y="1471.875"/>
+        </scene>
+        <!--ItemInShopStoryboardID-->
+        <scene sceneID="TwU-RC-TZI">
+            <objects>
+                <viewControllerPlaceholder storyboardName="ItemInShop" referencedIdentifier="ItemInShopStoryboardID" id="fsY-sK-E4e" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6yL-pE-Zis" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="249" y="1226"/>
         </scene>
         <!--GoogleMapStoryboardID-->
         <scene sceneID="KAC-ah-GVv">
@@ -147,7 +156,7 @@
                 <viewControllerPlaceholder storyboardName="GoogleMap" referencedIdentifier="GoogleMapStoryboardID" id="8fN-v2-VYx" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RxO-KP-5Xh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="317" y="1262"/>
+            <point key="canvasLocation" x="236" y="1286"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="rSq-mM-00m">
@@ -741,7 +750,7 @@
                         <outlet property="notification" destination="GSE-jy-aC8" id="ieA-Lf-YPK"/>
                         <outlet property="tableView" destination="TI1-aD-d0s" id="wTh-E7-zL2"/>
                         <segue destination="pAv-CV-Swc" kind="show" identifier="SearchToDetaild" id="Li0-6H-FeM"/>
-                        <segue destination="fGi-UI-Gzq" kind="show" identifier="SearchToShop" id="LvM-We-fbG"/>
+                        <segue destination="fGi-UI-Gzq" kind="show" identifier="SearchToItemInShop" id="LvM-We-fbG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HWn-Ny-m9a" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -756,10 +765,10 @@
             </objects>
             <point key="canvasLocation" x="1555" y="1337"/>
         </scene>
-        <!--ShopStoryboardID-->
+        <!--ItemInShopStoryboardID-->
         <scene sceneID="NDu-tS-Mfm">
             <objects>
-                <viewControllerPlaceholder storyboardName="Shop" referencedIdentifier="ShopStoryboardID" id="fGi-UI-Gzq" sceneMemberID="viewController"/>
+                <viewControllerPlaceholder storyboardName="ItemInShop" referencedIdentifier="ItemInShopStoryboardID" id="fGi-UI-Gzq" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zJ0-yV-URT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1604" y="1491"/>
