remove distance in categoryCell

--- a/notritionVendorsAPP/View/Base.lproj/Main.storyboard
+++ b/notritionVendorsAPP/View/Base.lproj/Main.storyboard
@@ -208,7 +208,7 @@
                                                                 <constraint firstAttribute="width" constant="70" id="bsS-IQ-ZkN"/>
                                                             </constraints>
                                                         </imageView>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="hfv-df-et4">
+                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="hfv-df-et4">
                                                             <rect key="frame" x="85" y="0.0" width="319" height="79.666666666666671"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E7t-TQ-jWn">
@@ -218,13 +218,13 @@
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7o0-TC-3Ld">
-                                                                    <rect key="frame" x="0.0" y="25.333333333333336" width="35.333333333333336" height="17"/>
+                                                                    <rect key="frame" x="0.0" y="20.333333333333332" width="35.333333333333336" height="16.999999999999996"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mPL-ca-oqL" customClass="CosmosView" customModule="Cosmos">
-                                                                    <rect key="frame" x="0.0" y="47.333333333333329" width="319" height="32.333333333333329"/>
+                                                                    <rect key="frame" x="0.0" y="37.333333333333329" width="319" height="42.333333333333329"/>
                                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                     <userDefinedRuntimeAttributes>
                                                                         <userDefinedRuntimeAttribute type="color" keyPath="filledColor">
@@ -344,29 +344,29 @@
                                                                 <constraint firstAttribute="width" constant="80" id="UNO-FY-PzI"/>
                                                             </constraints>
                                                         </imageView>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="2ci-04-6eR">
+                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="2ci-04-6eR">
                                                             <rect key="frame" x="95" y="0.0" width="309" height="95.666666666666671"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aXl-TS-wDv">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="309" height="20.333333333333332"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="309" height="30"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" constant="30" id="wFU-Pq-7yy"/>
+                                                                    </constraints>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jcp-IQ-RHO">
-                                                                    <rect key="frame" x="0.0" y="20.333333333333332" width="309" height="15.666666666666668"/>
+                                                                    <rect key="frame" x="0.0" y="35" width="309" height="20"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" constant="20" id="w2L-cX-fe0"/>
+                                                                    </constraints>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                                     <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1gx-vC-TkF">
-                                                                    <rect key="frame" x="0.0" y="36" width="309" height="17"/>
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                                    <color key="textColor" red="0.1062027202" green="0.64605805839999997" blue="0.011073882889999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                                    <nil key="highlightedColor"/>
-                                                                </label>
                                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="br0-MA-4fc" customClass="CosmosView" customModule="Cosmos">
-                                                                    <rect key="frame" x="0.0" y="53" width="120" height="42.666666666666657"/>
+                                                                    <rect key="frame" x="0.0" y="60" width="309" height="35.666666666666657"/>
                                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                     <userDefinedRuntimeAttributes>
                                                                         <userDefinedRuntimeAttribute type="color" keyPath="filledColor">
@@ -384,7 +384,7 @@
                                                             <constraints>
                                                                 <constraint firstItem="aXl-TS-wDv" firstAttribute="width" secondItem="2ci-04-6eR" secondAttribute="width" id="1le-B0-yLy"/>
                                                                 <constraint firstItem="Jcp-IQ-RHO" firstAttribute="width" secondItem="2ci-04-6eR" secondAttribute="width" id="TT4-XL-enM"/>
-                                                                <constraint firstItem="1gx-vC-TkF" firstAttribute="width" secondItem="2ci-04-6eR" secondAttribute="width" id="urD-me-yaC"/>
+                                                                <constraint firstItem="br0-MA-4fc" firstAttribute="width" secondItem="2ci-04-6eR" secondAttribute="width" id="c39-wA-F5d"/>
                                                             </constraints>
                                                         </stackView>
                                                     </subviews>
@@ -402,7 +402,6 @@
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="address" destination="Jcp-IQ-RHO" id="Av9-g6-kJt"/>
-                                            <outlet property="distance" destination="1gx-vC-TkF" id="Mdx-hc-RJ1"/>
                                             <outlet property="itemImage" destination="TZW-As-hTf" id="fSP-QU-OIi"/>
                                             <outlet property="name" destination="aXl-TS-wDv" id="Xud-kI-wUe"/>
                                             <outlet property="rating" destination="br0-MA-4fc" id="ogx-kP-ehW"/>
