custom ui searchCell

--- a/notritionVendorsAPP/View/Base.lproj/Main.storyboard
+++ b/notritionVendorsAPP/View/Base.lproj/Main.storyboard
@@ -664,28 +664,28 @@
                                                     <rect key="frame" x="10" y="10" width="404" height="79.666666666666671"/>
                                                     <subviews>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RRt-Jl-ASr" customClass="CustomImageView" customModule="notritionVendorsAPP" customModuleProvider="target">
-                                                            <rect key="frame" x="0.0" y="0.0" width="80" height="79.666666666666671"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="60" height="79.666666666666671"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="width" constant="80" id="3GG-1l-fqE"/>
+                                                                <constraint firstAttribute="width" constant="60" id="3GG-1l-fqE"/>
                                                             </constraints>
                                                         </imageView>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="w0E-oa-az9">
-                                                            <rect key="frame" x="95" y="0.0" width="309" height="79.666666666666671"/>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="w0E-oa-az9">
+                                                            <rect key="frame" x="75" y="0.0" width="329" height="79.666666666666671"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yfh-mu-5DP">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="309" height="20.333333333333332"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="329" height="20.333333333333332"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mmc-dN-ULd">
-                                                                    <rect key="frame" x="0.0" y="30.333333333333339" width="309" height="15.666666666666668"/>
+                                                                    <rect key="frame" x="0.0" y="20.333333333333332" width="329" height="15.666666666666668"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mhs-Gb-YBD" customClass="CosmosView" customModule="Cosmos">
-                                                                    <rect key="frame" x="0.0" y="55.999999999999993" width="120" height="23.666666666666664"/>
+                                                                    <rect key="frame" x="0.0" y="36" width="329" height="43.666666666666657"/>
                                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                     <userDefinedRuntimeAttributes>
                                                                         <userDefinedRuntimeAttribute type="color" keyPath="filledColor">
@@ -702,13 +702,11 @@
                                                             </subviews>
                                                             <constraints>
                                                                 <constraint firstItem="mmc-dN-ULd" firstAttribute="width" secondItem="w0E-oa-az9" secondAttribute="width" id="8YW-tf-hFO"/>
+                                                                <constraint firstItem="Mhs-Gb-YBD" firstAttribute="width" secondItem="w0E-oa-az9" secondAttribute="width" id="Jq6-Kh-5CO"/>
                                                                 <constraint firstItem="yfh-mu-5DP" firstAttribute="width" secondItem="w0E-oa-az9" secondAttribute="width" id="Mwa-BG-gQQ"/>
                                                             </constraints>
                                                         </stackView>
                                                     </subviews>
-                                                    <constraints>
-                                                        <constraint firstItem="w0E-oa-az9" firstAttribute="height" secondItem="tT0-jy-YF6" secondAttribute="height" id="ha3-Xg-wgL"/>
-                                                    </constraints>
                                                 </stackView>
                                             </subviews>
                                             <constraints>
